--- a/src/components/Grid.astro
+++ b/src/components/Grid.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class="grid grid-cols-1 lg:grid-cols-3 gap-8 lg:gap-16 xl:gap-32">
+<div class="grid grid-cols-2 lg:grid-cols-4 gap-8 lg:gap-16 xl:gap-32">
 	<Fragment>
 		<slot name="grid-content-1" />
 	</Fragment>
@@ -11,5 +11,8 @@
 	</Fragment>
 	<Fragment>
 		<slot name="grid-content-3" />
+	</Fragment>
+	<Fragment>
+		<slot name="grid-content-4" />
 	</Fragment>
 </div>
