--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ import { siteLang, themeColor } from "~/data/config";
     <meta name="googlebot" content="index,follow" />
     <link rel="author" href="humans.txt" />
 
-    <!-- <link
+    <link
 			rel="apple-touch-icon"
 			sizes="180x180"
 			href="/images/favicon/apple-touch-icon.png"
@@ -36,8 +36,8 @@ import { siteLang, themeColor } from "~/data/config";
 			sizes="16x16"
 			href="/images/favicon/favicon-16x16.png"
 		/>
-		<link rel="manifest" href="/site.webmanifest" />
-		<link
+		<!-- <link rel="manifest" href="/site.webmanifest" /> -->
+		<!-- <link
 			rel="mask-icon"
 			href="/images/favicon/safari-pinned-tab.svg"
 			color="#E6F4FF"
@@ -53,7 +53,7 @@ import { siteLang, themeColor } from "~/data/config";
       content="https://bakpia3generasi.vercel.app/_astro/pizza-hero.kFPN67v8_Z19LuF4.png"
     />
     <meta property="og:description" content={description} />
-    <meta property="og:site_name" content="WP Infusion" />
+    <meta property="og:site_name" content="Bakpia 3 Generasi"  />
     <meta property="og:locale" content={siteLang} />
 
     <meta name="twitter:card" content="summary" />
