--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -3,17 +3,179 @@ import Layout from "~/layouts/Layout.astro";
 import Section from "~/components/Section.astro";
 import Heading from "~/components/Heading.astro";
 import MenuList from "~/components/Menu.astro";
+import Hero from "~/components/Hero.astro";
+import Badge from "~/components/Badge.astro";
+import Button from "~/components/Button.astro";
+import { Picture, Image } from "astro:assets";
+
+import abon from "~/assets/images/bakpia_abon.png";
+import keju from "~/assets/images/bakpia_keju.png";
+import kacangh from "~/assets/images/bakpia_kacang.png";
+import coklatalmond from "~/assets/images/bakpia_coklatalm.png";
 ---
 
 <Layout>
-	<Section>
-		<Heading>
-			<h1 slot="heading-title" class="font-black text-brand-green h2">Our menu</h1>
-			<p slot="heading-content">
-				We offer a variety of dishes, from traditional to modern, that are sure to satisfy your cravings.
-			</p>
-		</Heading>
+  <Section>
+    <Heading>
+      <h1 slot="heading-title" class="font-black text-brand-green h2">
+        Varian Bakpia 3 Generasi
+      </h1>
+      <p slot="heading-content">
+        Tersedia 4 varian unggulan : Abon, Keju, Kacang Hijau dan Coklat almond
+      </p>
+    </Heading>
 
-		<MenuList />
-	</Section>
+    <!-- 1 ABON -->
+    <Section class:list={"bg-white"}>
+      <Hero>
+        <div slot="hero-content-left" class="prose lg:order-2">
+          <Badge color="red" title="Abon Sapi" />
+          <h1 class="font-black">BAKPIA ABON</h1>
+
+          <p>
+            Bakpia isi abon menawarkan cita rasa gurih dan unik. Abon yang
+            digunakan memiliki tekstur lembut dan rasa daging yang kuat,
+            memberikan sensasi berbeda dari bakpia manis pada umumnya. Cocok
+            bagi pencinta rasa gurih yang mencari variasi baru.
+          </p>
+          <span class="text-brand-green text-lg font-bold"
+            >Isi 8 : Rp 30.000 <br />
+            Isi 18 : Rp 50.000
+          </span>
+
+          <br />
+          <span class="text-brand-red text-2xl font-bold italic"
+            >Best Seller!</span
+          >
+
+          <div class="mt-8">
+            <div class="mt-8 flex items-center gap-x-8">
+              <Button url="/book">Pesan lewat Whatsapp</Button>
+              <!-- <ButtonCallUs /> -->
+            </div>
+          </div>
+        </div>
+        <div slot="hero-content-right">
+          <Picture
+            class:list={"mx-auto"}
+            src={abon}
+            height={600}
+            formats={["avif", "webp"]}
+            alt="A description of my image."
+          />
+        </div>
+      </Hero>
+    </Section>
+
+    <!-- 1 KEJU -->
+    <Section class:list={"bg-white"}>
+      <Hero>
+        <div slot="hero-content-left" class="prose max-w-none max-lg:order-1">
+          <Badge color="red" title="Keju terbaik" />
+          <h2 class="font-black h2 my-4">BAKPIA KEJU</h2>
+
+          <p>
+            Bakpia isi keju menyajikan perpaduan rasa manis dan gurih yang
+            lembut. Keju yang digunakan memberikan tekstur creamy dan rasa keju
+            yang khas, berpadu sempurna dengan kulit bakpia yang renyah. Varian
+            ini cocok bagi penyuka keju dan rasa manis yang tidak terlalu kuat.
+          </p>
+          <span class="text-brand-green text-lg font-bold"
+            >Isi 8 : Rp 30.000 <br />
+            Isi 18 : Rp 60.000
+          </span>
+
+          <br />
+          <div class="mt-8 flex items-center gap-x-8">
+            <Button url="/book">Pesan lewat Whatsapp</Button>
+            <!-- <ButtonCallUs /> -->
+          </div>
+        </div>
+        <div slot="hero-content-right">
+          <Picture
+            class:list={"mx-auto"}
+            src={keju}
+            height={600}
+            formats={["avif", "webp"]}
+            alt="A description of my image."
+          />
+        </div>
+      </Hero>
+    </Section>
+
+    <!-- 1 KACANGH -->
+    <Section class:list={"bg-white"}>
+      <Hero>
+        <div slot="hero-content-left" class="prose lg:order-2">
+          <Badge color="red" title="kacang hijau fresh!" />
+          <h1 class="font-black">BAKPIA KACANG HIJAU</h1>
+
+          <p>
+            Bakpia isi kacang hijau adalah varian klasik yang selalu digemari.
+            Kacang hijau yang diolah menjadi isian memiliki tekstur lembut dan
+            rasa manis yang pas. Varian ini cocok bagi mereka yang menyukai rasa
+            tradisional dan tekstur lembut yang khas dari kacang hijau.
+          </p>
+          <span class="text-brand-green text-lg font-bold"
+            >Isi 8 : Rp 25.000 <br />
+            Isi 18 : Rp 50.000
+          </span>
+
+          <br />
+          <div class="mt-8">
+            <div class="mt-8 flex items-center gap-x-8">
+              <Button url="/book">Pesan lewat Whatsapp</Button>
+              <!-- <ButtonCallUs /> -->
+            </div>
+          </div>
+        </div>
+        <div slot="hero-content-right">
+          <Picture
+            class:list={"mx-auto"}
+            src={kacangh}
+            height={600}
+            formats={["avif", "webp"]}
+            alt="A description of my image."
+          />
+        </div>
+      </Hero>
+    </Section>
+
+    <!-- 1 COKLATALM -->
+    <Section class:list={"bg-white"}>
+      <Hero>
+        <div slot="hero-content-left" class="prose max-w-none max-lg:order-1">
+          <Badge color="red" title="Almond pilihan" />
+          <h2 class="font-black h2 my-4">BAKPIA COKLAT ALMOND</h2>
+
+          <p>
+            Bakpia isi coklat almond adalah pilihan sempurna bagi pencinta
+            coklat. Coklat yang digunakan memiliki rasa manis yang kaya dan
+            tekstur lembut, diperkaya dengan potongan almond yang memberikan
+            sensasi renyah dan rasa kacang yang gurih. Kombinasi ini menciptakan
+            harmoni rasa yang memanjakan lidah.
+          </p>
+          <span class="text-brand-green text-lg font-bold"
+            >Isi 8 : Rp 25.000 <br />
+            Isi 18 : Rp 50.000
+          </span>
+
+          <br />
+          <div class="mt-8 flex items-center gap-x-8">
+            <Button url="/book">Pesan lewat Whatsapp</Button>
+            <!-- <ButtonCallUs /> -->
+          </div>
+        </div>
+        <div slot="hero-content-right">
+          <Picture
+            class:list={"mx-auto"}
+            src={coklatalmond}
+            height={600}
+            formats={["avif", "webp"]}
+            alt="A description of my image."
+          />
+        </div>
+      </Hero>
+    </Section>
+  </Section>
 </Layout>
