edit seo url and image

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -44,20 +44,20 @@ import { siteLang, themeColor } from "~/data/config";
 		/> -->
     <meta name="msapplication-TileColor" content="#ffffff" />
 
-    <meta property="og:url" content={Astro.url} />
+    <meta property="og:url" content="https://bakpia3generasi.vercel.app/" />
     <meta property="og:type" content="website" />
     <meta property="og:title" content={title} />
     <!-- <meta property="og:image" content={`${baseUrl}/images/fish.png`} /> -->
     <meta
       property="og:image"
-      content="https://bakpia3generasi.vercel.app/_astro/pizza-hero.kFPN67v8_Z19LuF4.png"
+      content="https://bakpia3generasi.vercel.app/_astro/bakpia_gallery.ByMdOTrR_Z1rXMM7.webp"
     />
     <meta property="og:description" content={description} />
     <meta property="og:site_name" content="Bakpia 3 Generasi"  />
     <meta property="og:locale" content={siteLang} />
 
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:url" content={Astro.url} />
+    <meta name="twitter:url" content="https://bakpia3generasi.vercel.app/" />
     <meta name="twitter:title" content={title} />
     <meta name="twitter:description" content={description} />
     <!-- <meta name="twitter:image" content={`${baseUrl}/images/fish.jpng`} /> -->
