adding image og twitter

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -60,7 +60,7 @@ import { siteLang, themeColor } from "~/data/config";
     <meta name="twitter:url" content="https://bakpia3generasi.vercel.app/" />
     <meta name="twitter:title" content={title} />
     <meta name="twitter:description" content={description} />
-    <!-- <meta name="twitter:image" content={`${baseUrl}/images/fish.jpng`} /> -->
+    <meta name="twitter:image" content="https://bakpia3generasi.vercel.app/_astro/bakpia_gallery.ByMdOTrR_Z1rXMM7.webp" />
     <title>{pageTitle}</title>
     <ClientRouter />
   </head>
