--- a/src/pages/about-us.astro
+++ b/src/pages/about-us.astro
@@ -42,16 +42,14 @@ import Article from "~/components/Article.astro";
       <h4>Keunggulan Bakpia 3 Generasi?</h4>
       <ul>
         <li>
-          <strong>Authenticity:</strong> Traditional recipes, just like Nonna used
-          to make.
+          <strong>Bahan-bahan fresh:</strong> Bahan baku yang fresh memberikan kualitas produk bakpia yang paling bagus
         </li>
         <li>
-          <strong>Fresh Ingredients:</strong> Locally sourced produce and imported
-          Italian staples.
+          <strong>Berbagai Varian Rasa</strong> Varian-varian rasa baru yang kami hadirkan menambah citarasa bakpia khas jogja
         </li>
-        <li>
+        <!-- <li>
           <strong>Warm Atmosphere:</strong> A place where everyone feels like family.
-        </li>
+        </li> -->
       </ul>
 
       <!-- <h3>Join Us</h3>
