--- a/src/pages/menu.astro
+++ b/src/pages/menu.astro
@@ -50,7 +50,7 @@ import coklatalmond from "~/assets/images/bakpia_coklatalm.png";
 
           <div class="mt-8">
             <div class="mt-8 flex items-center gap-x-8">
-              <Button url="/book">Pesan lewat Whatsapp</Button>
+              <!-- <Button url="/book">Pesan lewat Whatsapp</Button> -->
               <!-- <ButtonCallUs /> -->
             </div>
           </div>
@@ -87,7 +87,7 @@ import coklatalmond from "~/assets/images/bakpia_coklatalm.png";
 
           <br />
           <div class="mt-8 flex items-center gap-x-8">
-            <Button url="/book">Pesan lewat Whatsapp</Button>
+            <!-- <Button url="/book">Pesan lewat Whatsapp</Button> -->
             <!-- <ButtonCallUs /> -->
           </div>
         </div>
@@ -124,7 +124,7 @@ import coklatalmond from "~/assets/images/bakpia_coklatalm.png";
           <br />
           <div class="mt-8">
             <div class="mt-8 flex items-center gap-x-8">
-              <Button url="/book">Pesan lewat Whatsapp</Button>
+              <!-- <Button url="/book">Pesan lewat Whatsapp</Button> -->
               <!-- <ButtonCallUs /> -->
             </div>
           </div>
@@ -162,7 +162,7 @@ import coklatalmond from "~/assets/images/bakpia_coklatalm.png";
 
           <br />
           <div class="mt-8 flex items-center gap-x-8">
-            <Button url="/book">Pesan lewat Whatsapp</Button>
+            <!-- <Button url="/book">Pesan lewat Whatsapp</Button> -->
             <!-- <ButtonCallUs /> -->
           </div>
         </div>
