--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -22,19 +22,19 @@ import { siteLang, themeColor } from "~/data/config";
     <link
 			rel="apple-touch-icon"
 			sizes="180x180"
-			href="/images/favicon/apple-touch-icon.png"
+			href={`${baseUrl}/images/favicon/apple-touch-icon.png`}
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
-			href="/images/favicon/favicon-32x32.png"
+			href= {`${baseUrl}/images/favicon/favicon-32x32.png`}
 		/>
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="16x16"
-			href= "/images/favicon/favicon-16x16.png"
+			href= {`${baseUrl}/images/favicon/favicon-16x16.png`}
 		/>
 		<!-- <link rel="manifest" href="/site.webmanifest" /> -->
 		<!-- <link
